Added vita to homepage

--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@ title: Ryan Schuetzler
         {% endfor %}
 		<li><a href="posts.html">More...</a></li>
     </ul>
+	<h1>Misc</h1>
+	<ul>
+		<li><a href="/files/Schuetzler_Vita.pdf">Vita</a></li>
+	</ul>
 </div>
