Added Generate_sitemap plugin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Ryan Schuetzler
 		<li><a href="posts.html">More...</a></li>
     </ul>
 	<h1>Misc</h1>
-	<ul>
+	<ul class="posts">
 		<li><a href="/files/Schuetzler_Vita.pdf">Vita</a></li>
 	</ul>
 </div>
