--- a/_posts/2010-09-26-tech-support.html
+++ b/_posts/2010-09-26-tech-support.html
@@ -13,13 +13,13 @@ tags:
 type: post
 status: publish
 ---
-As everyone who does computer-y things knows, you will be called upon to do tech support for people around you. The most difficult of these calls is when you are doing tech support for a relative who lives far away. The best way I have found to do this technical support is using a tool included in Windows called Windows Remote Assistance.
+<p>As everyone who does computer-y things knows, you will be called upon to do tech support for people around you. The most difficult of these calls is when you are doing tech support for a relative who lives far away. The best way I have found to do this technical support is using a tool included in Windows called Windows Remote Assistance.</p>
 
-Windows Remote Assistance is basically a slightly modified version of Remote Desktop. With Remote Desktop you can log into a remote computer and do what you want. With Remote Assistance, you are invited by the user of a computer to share a session. The benefit of this is that you can see exactly what the user sees on his/her screen. You can also demonstrate how to do things by sharing control of the mouse.
+<p>Windows Remote Assistance is basically a slightly modified version of Remote Desktop. With Remote Desktop you can log into a remote computer and do what you want. With Remote Assistance, you are invited by the user of a computer to share a session. The benefit of this is that you can see exactly what the user sees on his/her screen. You can also demonstrate how to do things by sharing control of the mouse.</p>
 
-Windows 7 has the best version of Remote Assistance (at least it beats XP. I've never used it on Vista) because it has a feature called EasyConnect. Below I have the steps for using Remote Assistance with EasyConnect and Windows 7 on both the helper and the helpee's computers.
+<p>Windows 7 has the best version of Remote Assistance (at least it beats XP. I've never used it on Vista) because it has a feature called EasyConnect. Below I have the steps for using Remote Assistance with EasyConnect and Windows 7 on both the helper and the helpee's computers.</p>
 
-For the Helpee:
+<p>For the Helpee:</p>
 <ol>
 	<li>Hit the Start/Windows icon and type Remote Assistance in the "Search Programs" box</li>
 	<li>Click Windows Remote Assistance</li>
@@ -35,6 +35,6 @@ Now the Helper steps in:
 	<li>Enter the password given to you in step 5 of the Helpee instructions above</li>
 	<li>The Helpee will see a prompt asking if they want to share control of their computer with such-and-such. Instruct them to click yes on that prompt.</li>
 </ol>
-You now have a shared view of the computer. I don't remember the name of the button, but in the upper-left corner of the Helper's screen you should see a button that says something like "Request control." If you click that button, the Helpee will receive a prompt asking if they want to share control of the screen. If he/she clicks "Yes," you (the Helper) will be able to control the computer. This is incredibly useful for searching for stuff or demonstrating how to do something.
+<p>You now have a shared view of the computer. I don't remember the name of the button, but in the upper-left corner of the Helper's screen you should see a button that says something like "Request control." If you click that button, the Helpee will receive a prompt asking if they want to share control of the screen. If he/she clicks "Yes," you (the Helper) will be able to control the computer. This is incredibly useful for searching for stuff or demonstrating how to do something.</p>
 
-I know there are other tools as well that provide similar functionality. <a href="https://secure.logmein.com/">Logmein </a>and <a href="http://www.teamviewer.com/index.aspx">TeamViewer </a>are the two most common that I hear. However, both of these (I think) are browser-based, which to me seems like a big disadvantage. They don't provide the same experience as Remote Assistance in my experience. Plus, Windows Remote Assistance comes pre-packaged with Windows, so it's already there and ready to use.
+<p>I know there are other tools as well that provide similar functionality. <a href="https://secure.logmein.com/">Logmein </a>and <a href="http://www.teamviewer.com/index.aspx">TeamViewer </a>are the two most common that I hear. However, both of these (I think) are browser-based, which to me seems like a big disadvantage. They don't provide the same experience as Remote Assistance in my experience. Plus, Windows Remote Assistance comes pre-packaged with Windows, so it's already there and ready to use.</p>
