--- a/_posts/2010-10-02-windows-7-flash-drive.html
+++ b/_posts/2010-10-02-windows-7-flash-drive.html
@@ -12,7 +12,7 @@ tags:
 type: post
 status: publish
 ---
-I've got a netbook and a DVD image of Windows 7. I don't have a disc drive for the netbook, so I have to figure out a way to get Windows 7 onto a USB drive to install from. Thanks to <a href="http://www.thinkcomputers.org/install-windows-7-from-a-usb-flash-drive/">this site</a>, I was able to get it.
+<p>I've got a netbook and a DVD image of Windows 7. I don't have a disc drive for the netbook, so I have to figure out a way to get Windows 7 onto a USB drive to install from. Thanks to <a href="http://www.thinkcomputers.org/install-windows-7-from-a-usb-flash-drive/">this site</a>, I was able to get it.</p>
 <ol>
 	<li>You'll need a flash drive that's at least 4 GB. You don't need one any bigger than that, but if that's all you have, it will work.</li>
 	<li>If you have a CD, insert it into the computer. If not, you'll need to mount the ISO image. If you don't know how to do this, you can look it up. I use VirtualCloneDrive, but Daemon tools works too.</li>
@@ -33,4 +33,4 @@ I've got a netbook and a DVD image of Windows 7. I don't have a disc drive for t
 	<li><code>xcopy d:*.* /s/e/f e:</code></li>
 	<li>Once that finishes, you should be good to go. Just shut down the computer, and hit the key for "boot options" or something like that during your BIOS startup screen. Once you do that you can select the USB drive and the installation should begin normally.</li>
 </ol>
-That way worked for me. And as a side note, I'm running Windows 7 Professional on a netbook with an Intel Atom N270 processor and 1 GB of RAM and I have no complaints. It starts up fairly quickly, the battery life is almost the same as with XP, and I have an OS that's less than 8 years old. Obviously I can't be running a whole bunch of stuff at once with that kind of RAM, but on a netbook I don't have much reason to.
+<p>That way worked for me. And as a side note, I'm running Windows 7 Professional on a netbook with an Intel Atom N270 processor and 1 GB of RAM and I have no complaints. It starts up fairly quickly, the battery life is almost the same as with XP, and I have an OS that's less than 8 years old. Obviously I can't be running a whole bunch of stuff at once with that kind of RAM, but on a netbook I don't have much reason to.</p>
