--- a/_posts/2010-10-22-best-google-chrome-extensions.html
+++ b/_posts/2010-10-22-best-google-chrome-extensions.html
@@ -17,7 +17,7 @@ tags:
 type: post
 status: publish
 ---
-I've been using Google Chrome as my main browser pretty much since it came out. I love the minimal interface, bookmark sync, searching from the Omnibox, and the start page. Somewhat recently Chrome decided to jump on the extensions bandwagon, and I think it's great. Here is a quick list of the Chrome Extensions I use:
+<p>I've been using Google Chrome as my main browser pretty much since it came out. I love the minimal interface, bookmark sync, searching from the Omnibox, and the start page. Somewhat recently Chrome decided to jump on the extensions bandwagon, and I think it's great. Here is a quick list of the Chrome Extensions I use:</p>
 <ul>
 	<li><a href="https://chrome.google.com/extensions/detail/hdokiejnpimakedhajhdlcegeplioahd">LastPass</a> - This is my choice of password manager. It doesn't do everything perfectly, but I love that it's always synced across all my computers and browsers.</li>
 	<li><a href="https://chrome.google.com/extensions/detail/caehdcpeofiiigpdhbabniblemipncjj">ProxySwitchy</a> - I've talked about this one in a couple other posts, but this is the quickest way to switch between using a proxy and using a direct connection to the Internet. If you want a tutorial for how I use it, click <a href="http://www.schuetzler.net/blog/115/use-ssh-to-proxy-mac">here for Mac</a> or <a href="http://www.schuetzler.net/blog/113/how-to-use-putty-ssh-to-proxy">here for PC</a>.</li>
@@ -26,4 +26,4 @@ I've been using Google Chrome as my main browser pretty much since it came out. 
 	<li><a href="https://chrome.google.com/extensions/detail/gighmmpiobklfepjocnamgkkbiglidom">AdBlock</a> - I didn't get this one to block ads. I use it primarily to hide the "Explore" section from Google Reader. That was an endless time wasting pit of distraction, so I used Adblock and <a href="http://www.google.com/support/forum/p/reader/thread?tid=20b5ee428e8d5249&amp;hl=en">this quick tutorial</a>.</li>
 	<li><a href="https://chrome.google.com/extensions/detail/nlbjncdgjeocebhnmkbbbdekmmmcbfjd">RSS Subscription Extension</a> - This one I leave on all the time, but rarely use. I hated that there was no easy way to subscribe to a site's RSS feed in Chrome. With this extension, an RSS icon appears in the address bar when a feed is found for a site. Just click that icon to subscribe (I use Google Reader, so I don't know about how it works with other readers)</li>
 </ul>
-Anyway, that's what I use. What other extensions have you found helpful?
+<p>Anyway, that's what I use. What other extensions have you found helpful?</p>
