--- a/_posts/2011-03-23-mendeley.html
+++ b/_posts/2011-03-23-mendeley.html
@@ -12,8 +12,7 @@ tags:
 type: post
 status: publish
 ---
-In my quest to find the perfect tool to manage my ever-expanding library of PDFs, I discovered a tool called <a href="http://www.mendeley.com/" target="_blank">Mendeley</a>. Here's a quick rundown of what Mendeley does for me:
-<div>
+<p>In my quest to find the perfect tool to manage my ever-expanding library of PDFs, I discovered a tool called <a href="http://www.mendeley.com/" target="_blank">Mendeley</a>. Here's a quick rundown of what Mendeley does for me:</p>
 <ul>
 	<li>Manages references - this is similar to EndNote. You can put references into folders based on topic, class, project, paper, or whatever you want.</li>
 	<li>Manages PDFs - I have it set up to move all my PDFs to one folder and rename them to Author - Year - Title. I then use Dropbox to sync that folder to all my computers so I can always have access to my PDFs when I want them. <strong>Edit</strong>: Mendeley provides a sync service, but the free version is limited to 500 MB of individual space and 500 MB free space. Since I have the files in a Dropbox folder anyway, I just use that.</li>
@@ -21,14 +20,6 @@ In my quest to find the perfect tool to manage my ever-expanding library of PDFs
 	<li>Lit review - this is one of the killer features. Most references have an entry in the "Mendeley online Catalog." If you go to the online catalog, you can see links to similar articles.</li>
 	<li>Collaboration - you can create collaborative groups of references, and everyone can have access to the same library of references and PDFs.</li>
 </ul>
-<div>
+<p>I'm new to it, so I'm sure I will run into some limitations, but right now it seems like a pretty awesome tool. Also, you can import to/export from EndNote if you have to continue using that to work with other EndNote users.</p>
 
-I'm new to it, so I'm sure I will run into some limitations, but right now it seems like a pretty awesome tool. Also, you can import to/export from EndNote if you have to continue using that to work with other EndNote users.
-
-</div>
-</div>
-<div>
-
-One of the biggest limitations I have run into is the Cite-while-you-write functionality. Mendeley does such an awesome job keeping references straight, it's sad how poorly it performs at in-text citations. It has a Word plugin to allow you to insert citations. It has a fairly large list of formats, and if Zotero has a format for it, you can send it to Mendeley and they will send you a properly formatted version for use in Mendeley. Creating custom styles is currently a huge burden since it requires editing a fairly complicated XML file. Additionally, options for in-text citations are very limited. Currently you can only put in a citation in one format. If I have my references formatted as (Author, 2011), and I want to have another reference to the same paper that just includes the year, that is not possible. This is a huge limitation as far as using Mendeley to replace EndNote. If they could fix this, I think I could finally kick ugly old EndNote off my computer.
-
-</div>
+<p>One of the biggest limitations I have run into is the Cite-while-you-write functionality. Mendeley does such an awesome job keeping references straight, it's sad how poorly it performs at in-text citations. It has a Word plugin to allow you to insert citations. It has a fairly large list of formats, and if Zotero has a format for it, you can send it to Mendeley and they will send you a properly formatted version for use in Mendeley. Creating custom styles is currently a huge burden since it requires editing a fairly complicated XML file. Additionally, options for in-text citations are very limited. Currently you can only put in a citation in one format. If I have my references formatted as (Author, 2011), and I want to have another reference to the same paper that just includes the year, that is not possible. This is a huge limitation as far as using Mendeley to replace EndNote. If they could fix this, I think I could finally kick ugly old EndNote off my computer.</p>
