--- a/_posts/2011-05-02-very-basic-seo.html
+++ b/_posts/2011-05-02-very-basic-seo.html
@@ -13,7 +13,7 @@ tags:
 type: post
 status: publish
 ---
-As part of a web computing class, a couple other students and I created a website called <a href="http://www.videorentalexperts.com">MyFlixList</a>. As extra credit for the course, we were told to apply the things we learned about PageRank and SEO to become the top search result on Google for the term <a href="http://www.videorentalexperts.com">mis510proj</a>. Here is a basic summary of the steps we took to become the number 1 result (which we are as of press time).
+<p>As part of a web computing class, a couple other students and I created a website called <a href="http://www.videorentalexperts.com">MyFlixList</a>. As extra credit for the course, we were told to apply the things we learned about PageRank and SEO to become the top search result on Google for the term <a href="http://www.videorentalexperts.com">mis510proj</a>. Here is a basic summary of the steps we took to become the number 1 result (which we are as of press time).</p>
 <ol>
 	<li>Make the title of the page mis510proj. That was one of the requirements of the project, but it's a good idea.</li>
 	<li>Have the keyword in the domain. We were not allowed to spend money on the project, so that was out. However, we could have used mis510proj.videorentalexperts.com. We decided not to since most other groups didn't even have a domain name.</li>
@@ -22,4 +22,4 @@ As part of a web computing class, a couple other students and I created a websit
 	<li>Link sharing. I cannot overstate the importance of this step. We contacted other groups and offered to link to them if they would link to us. The more links we had to our site using mis510proj as the anchor text, the better off we were</li>
 	<li>Use the keyword in natural language. We have a paragraph at the bottom of the homepage that uses the keyword mis510proj a bunch of times. Be careful not to overdue this, as too many mentions of the keyword will actually hurt more than it helps. We also have the keyword inside an &lt;h1&gt; tag, which shows that it is an important part of the site</li>
 </ol>
-That's all the basic tips I have for SEO. There are a ton of other things that are important, but this is a decent primer for how to get started getting ranked for a keyword on Google.
+<p>That's all the basic tips I have for SEO. There are a ton of other things that are important, but this is a decent primer for how to get started getting ranked for a keyword on Google.</p>
