--- a/_posts/2010-07-01-messed-up-water-bottle.html
+++ b/_posts/2010-07-01-messed-up-water-bottle.html
@@ -11,6 +11,6 @@ tags:
 type: post
 status: publish
 ---
-This is apparently what happens to a perfectly normal water bottle when you leave it in the back window of your car at 90 degrees:
+<p>This is apparently what happens to a perfectly normal water bottle when you leave it in the back window of your car at 90 degrees:</p>
 
 <img class="alignnone" title="Messed up Water Bottle" src="http://lh3.ggpht.com/_1K1I6RHdbSw/TC0uU7GefpI/AAAAAAAAAHo/a3Iai0yhbtE/s640/DSCN2400.JPG" alt="" width="512" height="384" />
