--- a/_posts/2010-05-23-still-here.html
+++ b/_posts/2010-05-23-still-here.html
@@ -9,6 +9,6 @@ tags:
 type: post
 status: publish
 ---
-Things have been pretty crazy the past few weeks. I've graduated, moved, gone on vacation, returned from vacation, interviewed for jobs, found a job, and started a job. Things are calming down now, and I may be able to write something useful here soon.
+<p>Things have been pretty crazy the past few weeks. I've graduated, moved, gone on vacation, returned from vacation, interviewed for jobs, found a job, and started a job. Things are calming down now, and I may be able to write something useful here soon.</p>
 
-I plan on spending the summer refreshing my increasingly lacking programming abilities. I intended to do it with Python, but it sounds like Java will be a better investment for me, at least for now.
+<p>I plan on spending the summer refreshing my increasingly lacking programming abilities. I intended to do it with Python, but it sounds like Java will be a better investment for me, at least for now.</p>
