--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: Ryan Schuetzler
     </ul>
 	<h1>Misc</h1>
 	<ul class="posts">
-		<li><a href="/files/Schuetzler_Vita.pdf">Vita</a></li>
+		<li><a href="/files/Schuetzler_Vita.pdf">Vita [PDF]</a></li>
+		<li><a href="about.html">About me</a></li>
 	</ul>
 </div>
