added meta descriptions

--- a/_posts/2011-08-14-how-to-add-pictures-to-blogger-more-easily-windows-live-writer.html
+++ b/_posts/2011-08-14-how-to-add-pictures-to-blogger-more-easily-windows-live-writer.html
@@ -1,6 +1,7 @@
 --- 
 layout: post
 title: How to add pictures to Blogger more easily
+description: Using Windows Live Writer makes adding and arranging pictures in a blog post much simpler.
 published: true
 meta: 
   _edit_last: "2"
