--- a/_posts/2011-08-19-getting-started-with-jekyll.html
+++ b/_posts/2011-08-19-getting-started-with-jekyll.html
@@ -2,6 +2,7 @@
 layout: post
 title: Getting started with Jekyll
 published: true
+description: "A basic overview for getting a website up and running using Jekyll, a static site generator."
 meta: 
   _edit_last: "2"
 tags: 
