Fixing noodles post

--- a/_posts/2011-08-21-asian-chicken-and-noodles.html
+++ b/_posts/2011-08-21-asian-chicken-and-noodles.html
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Foodage: Asian Chicken and Noodles
+title: Foodage - Asian Chicken and Noodles
 published: true
 description: A delicious slow cooker recipe for Asian chicken.
 tags: 
