Changed title of crazy semester post

--- a/_posts/2011-08-27-warning-crazy-semester-ahead.html
+++ b/_posts/2011-08-27-warning-crazy-semester-ahead.html
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Warning-Crazy semester ahead
+title: Warning! Crazy semester ahead
 published: true
 description: Looking ahead to programming more than I ever have in my life
 tags: 
