--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ title: Ryan Schuetzler
         {% for post in site.posts limit:10 %}
           <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
-		<li><a href="posts.html">More...</a></li>
+		<li><a href="posts">More...</a></li>
     </ul>
 	<h1>Misc</h1>
 	<ul class="posts">
 		<li><a href="/files/Schuetzler_Vita.pdf">Vita [PDF]</a></li>
-		<li><a href="about.html">About me</a></li>
+		<li><a href="about">About me</a></li>
 	</ul>
 </div>
