added mormon.org to homepage

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@ title: Ryan Schuetzler
 	<ul class="posts">
 		<li><a href="/files/Schuetzler_Vita.pdf">Vita [PDF]</a></li>
 		<li><a href="about">About me</a></li>
+		<li><a href="http://mormon.org/me/1N4H/">I'm a Mormon</a></li>
 	</ul>
 </div>
