Some changes to misleading conclusions post

--- a/_posts/2012-01-19-misleading-conclusions.html
+++ b/_posts/2012-01-19-misleading-conclusions.html
@@ -1,8 +1,9 @@
 --- 
 layout: post
-title: Getting Older
+title: Misleading Conclusions
 published: true
-description: 
+description: Scientific research and statistics can be easily manipulated to
+say whatever you want them to say.
 ---
 <p>There's a curse that comes with being a doctoral student. The curse is that
 I can rarely take the results of any study at face value. I suppose this has
