--- a/_posts/2012-05-20-welcome-to-summer.html
+++ b/_posts/2012-05-20-welcome-to-summer.html
@@ -1,8 +1,8 @@
 --- 
 layout: post
-title: Misleading Conclusions
+title: Welcome to Summer (2012 Edition)
 published: true
-description: Scientific research and statistics can be easily manipulated to say whatever you want them to say
+description: It is that time of year again.
 ---
 <p>So, it's that time of year. As a grad student, my summers aren't terribly 
 different from my school years. I don't have class, but in its place I have a 
