Fixed blog link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<a href="http://www.linkedin.com/in/rschuetzler"><img src="css/images/in-icon.png" /></a>
 					<a href="https://plus.google.com/101917908304099087510"><img src="css/images/gplus-icon.png" /></a>
 					<a href="http://twitter.com/#!/rschuetzler"><img src="css/images/twitter-icon.png" /></a>
-					<a href="http://www.schuetzler.net/blog.html"><img src="css/images/blog-icon.png" /></a>
+					<a href="http://www.schuetzler.net/blog"><img src="css/images/blog-icon.png" /></a>
 				</div>
 			</div>
 		</div>
