--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Ryan Schuetzler
         {% for post in site.posts limit:10 %}
           <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
-		<li><a href="posts">More...</a></li>
+		<li><a href="blog/posts">More...</a></li>
     </ul>
 	<h1>Misc</h1>
 	<ul class="posts">
